--- a/QuickFitness/app/src/main/AndroidManifest.xml
+++ b/QuickFitness/app/src/main/AndroidManifest.xml
@@ -7,15 +7,15 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:label="@string/app_name"
         android:theme="@style/Theme.QuickFitness">
-        <!--android:label="@string/app_name"-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SingleActivityApp"/>
+        <activity android:name=".LogInActivity"/>
         <activity android:name=".ExerciseActivity"/>
     </application>
 
