--- a/QuickFitness/app/build.gradle
+++ b/QuickFitness/app/build.gradle
@@ -29,11 +29,15 @@ android {
 }
 
 dependencies {
-
+    def retrofit_version = "2.9.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
