--- a/QuickFitness/app/src/main/AndroidManifest.xml
+++ b/QuickFitness/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.QuickFitness">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LogInActivity"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".ExerciseActivity"/>
     </application>
 
