--- a/QuickFitness/app/build.gradle
+++ b/QuickFitness/app/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     def retrofit_version = "2.9.0"
     def ok_http_version = "4.9.0"
 
