--- a/QuickFitness/app/src/main/AndroidManifest.xml
+++ b/QuickFitness/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-        <activity android:name=".ExerciseActivity"/>
+        <activity android:name=".ExerciseActivity"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
