--- a/QuickFitness/app/build.gradle
+++ b/QuickFitness/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
 
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
 
+    def room_version = "2.2.5"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
